--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "คุณสามารถเพิ่มกิจวัตรประจำวันที่ใช้บ่อยที่สุดได้ที่นี่",
     "CL_CF_HP_Add_Home_Status": "เพิ่มสถานะบ้าน",
     "CL_CF_HP_Add_Home_Status_tip": "คุณสามารถเพิ่มการ์ดอุปกรณ์ที่ใช้บ่อยที่สุดได้ที่นี่",
-    "CL_CF_HP_Add_Things_To_Do": "เพิ่มสิ่งที่ต้องทำ",
+    "CL_CF_HP_Add_Things_To_Do": "เพิ่มค้นพบเพิ่มเติม",
     "CL_CF_HP_Add_Things_To_Do_tip": "คุณสามารถเพิ่มวิดเจ็ตที่ใช้บ่อยที่สุดได้ที่นี่",
     "CL_CF_HP_Add_Discover": "เพิ่มการค้นพบ",
     "CL_CF_HP_Add_Discover_tip": "คุณสามารถเพิ่มเคล็ดลับที่ใช้บ่อยที่สุดได้ที่นี่",
