--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "يمكنك إضافة الروتينات اليدوية الأكثر استخدامًا هنا",
     "CL_CF_HP_Add_Home_Status": "إضافة حالة المنزل",
     "CL_CF_HP_Add_Home_Status_tip": "يمكنك إضافة بطاقات الأجهزة الأكثر استخدامًا هنا",
-    "CL_CF_HP_Add_Things_To_Do": "أضف أشياء للقيام بها",
+    "CL_CF_HP_Add_Things_To_Do": "أضف اكتشف المزيد",
     "CL_CF_HP_Add_Things_To_Do_tip": "يمكنك إضافة الأدوات الأكثر استخدامًا هنا",
     "CL_CF_HP_Add_Discover": "إضافة اكتشف",
     "CL_CF_HP_Add_Discover_tip": "يمكنك إضافة النصائح الأكثر استخدامًا هنا",
