--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Тук можете да добавите най-използваните ръчни процедури",
     "CL_CF_HP_Add_Home_Status": "Добавяне на домашен статус",
     "CL_CF_HP_Add_Home_Status_tip": "Тук можете да добавите най-използваните карти на устройството",
-    "CL_CF_HP_Add_Things_To_Do": "Добавете неща за вършене",
+    "CL_CF_HP_Add_Things_To_Do": "Добавете Открийте повече",
     "CL_CF_HP_Add_Things_To_Do_tip": "Тук можете да добавите най-използваните джаджи",
     "CL_CF_HP_Add_Discover": "Добавяне на Discover",
     "CL_CF_HP_Add_Discover_tip": "Тук можете да добавите най-използваните съвети",
