--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Zde můžete přidat nejpoužívanější ruční rutiny",
     "CL_CF_HP_Add_Home_Status": "Přidat stav domova",
     "CL_CF_HP_Add_Home_Status_tip": "Zde můžete přidat nejpoužívanější karty zařízení",
-    "CL_CF_HP_Add_Things_To_Do": "Přidat úkoly",
+    "CL_CF_HP_Add_Things_To_Do": "Přidat Objevte více",
     "CL_CF_HP_Add_Things_To_Do_tip": "Zde můžete přidat nejpoužívanější widgety",
     "CL_CF_HP_Add_Discover": "Přidat Discover",
     "CL_CF_HP_Add_Discover_tip": "Zde můžete přidávat nejpoužívanější tipy",
