--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Du kan tilføje de mest brugte manuelle rutiner her",
     "CL_CF_HP_Add_Home_Status": "Tilføj Home Status",
     "CL_CF_HP_Add_Home_Status_tip": "Du kan tilføje de mest brugte enhedskort her",
-    "CL_CF_HP_Add_Things_To_Do": "Tilføj ting at gøre",
+    "CL_CF_HP_Add_Things_To_Do": "Tilføj Opdag mere",
     "CL_CF_HP_Add_Things_To_Do_tip": "Du kan tilføje de mest brugte widgets her",
     "CL_CF_HP_Add_Discover": "Tilføj Discover",
     "CL_CF_HP_Add_Discover_tip": "Du kan tilføje de mest brugte tips her",
