--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Μπορείτε να προσθέσετε τις πιο χρησιμοποιούμενες μη αυτόματες ρουτίνες εδώ",
     "CL_CF_HP_Add_Home_Status": "Προσθήκη αρχικής κατάστασης",
     "CL_CF_HP_Add_Home_Status_tip": "Μπορείτε να προσθέσετε τις πιο χρησιμοποιημένες κάρτες συσκευών εδώ",
-    "CL_CF_HP_Add_Things_To_Do": "Προσθέστε πράγματα που πρέπει να κάνετε",
+    "CL_CF_HP_Add_Things_To_Do": "Προσθήκη Discover More",
     "CL_CF_HP_Add_Things_To_Do_tip": "Μπορείτε να προσθέσετε τα πιο χρησιμοποιημένα γραφικά στοιχεία εδώ",
     "CL_CF_HP_Add_Discover": "Προσθήκη Discover",
     "CL_CF_HP_Add_Discover_tip": "Μπορείτε να προσθέσετε τις πιο χρησιμοποιημένες συμβουλές εδώ",
