--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "You can add the most used manual routines here",
     "CL_CF_HP_Add_Home_Status": "Add Home Status",
     "CL_CF_HP_Add_Home_Status_tip": "You can add the most used device cards here",
-    "CL_CF_HP_Add_Things_To_Do": "Add Things To Do",
+    "CL_CF_HP_Add_Things_To_Do": "Add Discover More",
     "CL_CF_HP_Add_Things_To_Do_tip": "You can add the most used widgets here",
     "CL_CF_HP_Add_Discover": "Add Discover",
     "CL_CF_HP_Add_Discover_tip": "You can add the most used tips here",
