--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Puedes agregar aquí las rutinas manuales más utilizadas",
     "CL_CF_HP_Add_Home_Status": "Añadir estado de inicio",
     "CL_CF_HP_Add_Home_Status_tip": "Puedes agregar aquí las tarjetas de dispositivos más utilizadas",
-    "CL_CF_HP_Add_Things_To_Do": "Agregar cosas para hacer",
+    "CL_CF_HP_Add_Things_To_Do": "Añadir Descubrir más",
     "CL_CF_HP_Add_Things_To_Do_tip": "Puedes agregar aquí los widgets más utilizados",
     "CL_CF_HP_Add_Discover": "Añadir Descubrir",
     "CL_CF_HP_Add_Discover_tip": "Puedes añadir aquí los consejos más utilizados",
