--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "شما می توانید پر استفاده ترین روال های دستی را در اینجا اضافه کنید",
     "CL_CF_HP_Add_Home_Status": "اضافه کردن وضعیت خانه",
     "CL_CF_HP_Add_Home_Status_tip": "می‌توانید کارت‌های دستگاه‌های پرکاربرد را در اینجا اضافه کنید",
-    "CL_CF_HP_Add_Things_To_Do": "چیزهایی که باید انجام شود را اضافه کنید",
+    "CL_CF_HP_Add_Things_To_Do": "کشف بیشتر را اضافه کنید",
     "CL_CF_HP_Add_Things_To_Do_tip": "شما می توانید ابزارک های پر استفاده را در اینجا اضافه کنید",
     "CL_CF_HP_Add_Discover": "Discover را اضافه کنید",
     "CL_CF_HP_Add_Discover_tip": "در اینجا می توانید نکاتی را که بیشترین استفاده را دارند اضافه کنید",
