--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "אתה יכול להוסיף את השגרות הידניות הנפוצות ביותר כאן",
     "CL_CF_HP_Add_Home_Status": "הוסף סטטוס בית",
     "CL_CF_HP_Add_Home_Status_tip": "אתה יכול להוסיף את כרטיסי המכשירים הנפוצים ביותר כאן",
-    "CL_CF_HP_Add_Things_To_Do": "הוסף דברים לעשות",
+    "CL_CF_HP_Add_Things_To_Do": "הוסף Discover More",
     "CL_CF_HP_Add_Things_To_Do_tip": "אתה יכול להוסיף את הווידג'טים הנפוצים ביותר כאן",
     "CL_CF_HP_Add_Discover": "הוסף את Discover",
     "CL_CF_HP_Add_Discover_tip": "אתה יכול להוסיף את הטיפים הנפוצים ביותר כאן",
