--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Ovdje možete dodati najčešće korištene ručne rutine",
     "CL_CF_HP_Add_Home_Status": "Dodajte status doma",
     "CL_CF_HP_Add_Home_Status_tip": "Ovdje možete dodati najčešće korištene kartice uređaja",
-    "CL_CF_HP_Add_Things_To_Do": "Dodajte aktivnosti",
+    "CL_CF_HP_Add_Things_To_Do": "Dodajte Otkrijte više",
     "CL_CF_HP_Add_Things_To_Do_tip": "Ovdje možete dodati najčešće korištene widgete",
     "CL_CF_HP_Add_Discover": "Dodajte Discover",
     "CL_CF_HP_Add_Discover_tip": "Ovdje možete dodati najčešće korištene savjete",
