--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Itt adhatja hozzá a leggyakrabban használt manuális rutinokat",
     "CL_CF_HP_Add_Home_Status": "Otthoni állapot hozzáadása",
     "CL_CF_HP_Add_Home_Status_tip": "Itt adhatja hozzá a leggyakrabban használt eszközkártyákat",
-    "CL_CF_HP_Add_Things_To_Do": "Teendők hozzáadása",
+    "CL_CF_HP_Add_Things_To_Do": "Add Fedezzen fel többet",
     "CL_CF_HP_Add_Things_To_Do_tip": "Itt adhatja hozzá a leggyakrabban használt widgeteket",
     "CL_CF_HP_Add_Discover": "Felfedezés hozzáadása",
     "CL_CF_HP_Add_Discover_tip": "Itt adhatja hozzá a leggyakrabban használt tippeket",
