--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Anda dapat menambahkan rutinitas manual yang paling sering digunakan di sini",
     "CL_CF_HP_Add_Home_Status": "Tambahkan Status Rumah",
     "CL_CF_HP_Add_Home_Status_tip": "Anda dapat menambahkan kartu perangkat yang paling sering digunakan di sini",
-    "CL_CF_HP_Add_Things_To_Do": "Tambahkan Hal yang Harus Dilakukan",
+    "CL_CF_HP_Add_Things_To_Do": "Tambahkan Temukan Lebih Banyak",
     "CL_CF_HP_Add_Things_To_Do_tip": "Anda dapat menambahkan widget yang paling sering digunakan di sini",
     "CL_CF_HP_Add_Discover": "Tambahkan Temukan",
     "CL_CF_HP_Add_Discover_tip": "Anda dapat menambahkan tips yang paling sering digunakan di sini",
