--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Мұнда ең көп қолданылатын қолмен жұмыс режимдерін қосуға болады",
     "CL_CF_HP_Add_Home_Status": "Үй күйін қосу",
     "CL_CF_HP_Add_Home_Status_tip": "Мұнда ең көп қолданылатын құрылғы карталарын қосуға болады",
-    "CL_CF_HP_Add_Things_To_Do": "Орындалатын нәрселерді қосыңыз",
+    "CL_CF_HP_Add_Things_To_Do": "Қосымша ақпаратты қосыңыз",
     "CL_CF_HP_Add_Things_To_Do_tip": "Мұнда ең көп қолданылатын виджеттерді қосуға болады",
     "CL_CF_HP_Add_Discover": "Discover қосу",
     "CL_CF_HP_Add_Discover_tip": "Мұнда ең көп қолданылатын кеңестерді қосуға болады",
