--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "가장 많이 사용되는 수동 루틴을 여기에 추가할 수 있습니다.",
     "CL_CF_HP_Add_Home_Status": "홈 상태 추가",
     "CL_CF_HP_Add_Home_Status_tip": "가장 많이 사용하는 장치 카드를 여기에 추가할 수 있습니다.",
-    "CL_CF_HP_Add_Things_To_Do": "할 일 추가",
+    "CL_CF_HP_Add_Things_To_Do": "추가 더 알아보기",
     "CL_CF_HP_Add_Things_To_Do_tip": "가장 많이 사용되는 위젯을 여기에 추가할 수 있습니다",
     "CL_CF_HP_Add_Discover": "발견 추가",
     "CL_CF_HP_Add_Discover_tip": "가장 많이 사용되는 팁을 여기에 추가할 수 있습니다",
