--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Овде можете да ги додадете најкористените рачни рутини",
     "CL_CF_HP_Add_Home_Status": "Додадете статус на дом",
     "CL_CF_HP_Add_Home_Status_tip": "Тука можете да ги додадете најкористените картички на уредите",
-    "CL_CF_HP_Add_Things_To_Do": "Додадете работи што треба да ги направите",
+    "CL_CF_HP_Add_Things_To_Do": "Додајте Откријте повеќе",
     "CL_CF_HP_Add_Things_To_Do_tip": "Овде можете да ги додадете најкористените графички контроли",
     "CL_CF_HP_Add_Discover": "Додадете Discover",
     "CL_CF_HP_Add_Discover_tip": "Тука можете да ги додадете најкористените совети",
