--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Du kan legge til de mest brukte manuelle rutinene her",
     "CL_CF_HP_Add_Home_Status": "Legg til hjemmestatus",
     "CL_CF_HP_Add_Home_Status_tip": "Du kan legge til de mest brukte enhetskortene her",
-    "CL_CF_HP_Add_Things_To_Do": "Legg til ting å gjøre",
+    "CL_CF_HP_Add_Things_To_Do": "Legg til Discover More",
     "CL_CF_HP_Add_Things_To_Do_tip": "Du kan legge til de mest brukte widgetene her",
     "CL_CF_HP_Add_Discover": "Legg til Discover",
     "CL_CF_HP_Add_Discover_tip": "Du kan legge til de mest brukte tipsene her",
