--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Você pode adicionar as rotinas manuais mais usadas aqui",
     "CL_CF_HP_Add_Home_Status": "Adicionar status inicial",
     "CL_CF_HP_Add_Home_Status_tip": "Você pode adicionar os cartões de dispositivos mais usados aqui",
-    "CL_CF_HP_Add_Things_To_Do": "Adicionar coisas para fazer",
+    "CL_CF_HP_Add_Things_To_Do": "Adicionar Descubra Mais",
     "CL_CF_HP_Add_Things_To_Do_tip": "Você pode adicionar os widgets mais usados aqui",
     "CL_CF_HP_Add_Discover": "Adicionar Descobrir",
     "CL_CF_HP_Add_Discover_tip": "Você pode adicionar as dicas mais usadas aqui",
