--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Tu môžete pridať najpoužívanejšie manuálne rutiny",
     "CL_CF_HP_Add_Home_Status": "Pridať stav domova",
     "CL_CF_HP_Add_Home_Status_tip": "Tu môžete pridať najpoužívanejšie karty zariadení",
-    "CL_CF_HP_Add_Things_To_Do": "Pridať aktivity",
+    "CL_CF_HP_Add_Things_To_Do": "Pridať Objavte viac",
     "CL_CF_HP_Add_Things_To_Do_tip": "Tu môžete pridať najpoužívanejšie widgety",
     "CL_CF_HP_Add_Discover": "Pridať Discover",
     "CL_CF_HP_Add_Discover_tip": "Tu môžete pridať najpoužívanejšie tipy",
