--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Tukaj lahko dodate najpogosteje uporabljene ročne rutine",
     "CL_CF_HP_Add_Home_Status": "Dodajte status doma",
     "CL_CF_HP_Add_Home_Status_tip": "Tukaj lahko dodate najpogosteje uporabljene kartice naprav",
-    "CL_CF_HP_Add_Things_To_Do": "Dodajte opravila",
+    "CL_CF_HP_Add_Things_To_Do": "Dodajte Odkrijte več",
     "CL_CF_HP_Add_Things_To_Do_tip": "Tukaj lahko dodate najpogosteje uporabljene pripomočke",
     "CL_CF_HP_Add_Discover": "Dodaj Discover",
     "CL_CF_HP_Add_Discover_tip": "Tukaj lahko dodate najpogosteje uporabljene nasvete",
