--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "En çok kullanılan manuel rutinleri buraya ekleyebilirsiniz",
     "CL_CF_HP_Add_Home_Status": "Ev Durumunu Ekle",
     "CL_CF_HP_Add_Home_Status_tip": "En çok kullanılan cihaz kartlarını buraya ekleyebilirsiniz",
-    "CL_CF_HP_Add_Things_To_Do": "Yapılacak Şeyler Ekle",
+    "CL_CF_HP_Add_Things_To_Do": "Ekle Daha Fazlasını Keşfet",
     "CL_CF_HP_Add_Things_To_Do_tip": "En çok kullanılan widget'ları buraya ekleyebilirsiniz",
     "CL_CF_HP_Add_Discover": "Ekle Keşfet",
     "CL_CF_HP_Add_Discover_tip": "En çok kullanılan ipuçlarını buraya ekleyebilirsiniz",
