--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Тут ви можете додати найбільш використовувані ручні процедури",
     "CL_CF_HP_Add_Home_Status": "Додайте домашній статус",
     "CL_CF_HP_Add_Home_Status_tip": "Тут можна додати карти пристроїв, які найчастіше використовуються",
-    "CL_CF_HP_Add_Things_To_Do": "Додайте речі, які потрібно зробити",
+    "CL_CF_HP_Add_Things_To_Do": "Додайте Дізнайтеся більше",
     "CL_CF_HP_Add_Things_To_Do_tip": "Тут можна додати віджети, які найчастіше використовуються",
     "CL_CF_HP_Add_Discover": "Додати Discover",
     "CL_CF_HP_Add_Discover_tip": "Тут ви можете додати найбільш використовувані поради",
