--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Bạn có thể thêm các thói quen thủ công được sử dụng nhiều nhất ở đây",
     "CL_CF_HP_Add_Home_Status": "Thêm trạng thái trang chủ",
     "CL_CF_HP_Add_Home_Status_tip": "Bạn có thể thêm các thẻ thiết bị được sử dụng nhiều nhất tại đây",
-    "CL_CF_HP_Add_Things_To_Do": "Thêm việc cần làm",
+    "CL_CF_HP_Add_Things_To_Do": "Thêm Khám phá thêm",
     "CL_CF_HP_Add_Things_To_Do_tip": "Bạn có thể thêm các tiện ích được sử dụng nhiều nhất ở đây",
     "CL_CF_HP_Add_Discover": "Thêm Khám phá",
     "CL_CF_HP_Add_Discover_tip": "Bạn có thể thêm các mẹo được sử dụng nhiều nhất ở đây",
