--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "您可以在此處新增最常用的手動例程",
     "CL_CF_HP_Add_Home_Status": "新增家庭狀態",
     "CL_CF_HP_Add_Home_Status_tip": "您可以在此處新增最常用的設備卡",
-    "CL_CF_HP_Add_Things_To_Do": "新增待辦事項",
+    "CL_CF_HP_Add_Things_To_Do": "添加發現更多",
     "CL_CF_HP_Add_Things_To_Do_tip": "您可以在此處添加最常用的小部件",
     "CL_CF_HP_Add_Discover": "添加發現",
     "CL_CF_HP_Add_Discover_tip": "您可以在此處新增最常用的提示",
