--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "您可以在此处添加最常用的手动例程",
     "CL_CF_HP_Add_Home_Status": "添加家庭状态",
     "CL_CF_HP_Add_Home_Status_tip": "您可以在此处添加最常用的设备卡",
-    "CL_CF_HP_Add_Things_To_Do": "添加要做的事情",
+    "CL_CF_HP_Add_Things_To_Do": "添加发现更多",
     "CL_CF_HP_Add_Things_To_Do_tip": "您可以在此处添加最常用的小部件",
     "CL_CF_HP_Add_Discover": "添加发现",
     "CL_CF_HP_Add_Discover_tip": "您可以在此处添加最常用的提示",
