--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Vous pouvez ajouter ici les routines manuelles les plus utilisées",
     "CL_CF_HP_Add_Home_Status": "Ajouter le statut de la maison",
     "CL_CF_HP_Add_Home_Status_tip": "Vous pouvez ajouter ici les cartes d'appareils les plus utilisées",
-    "CL_CF_HP_Add_Things_To_Do": "Ajouter des choses à faire",
+    "CL_CF_HP_Add_Things_To_Do": "Ajouter Découvrir plus",
     "CL_CF_HP_Add_Things_To_Do_tip": "Vous pouvez ajouter ici les widgets les plus utilisés",
     "CL_CF_HP_Add_Discover": "Ajouter Découvrir",
     "CL_CF_HP_Add_Discover_tip": "Vous pouvez ajouter ici les astuces les plus utilisées",
