--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "最もよく使用される手動ルーチンをここに追加できます",
     "CL_CF_HP_Add_Home_Status": "ホームステータスを追加",
     "CL_CF_HP_Add_Home_Status_tip": "最もよく使用されるデバイスカードをここに追加できます",
-    "CL_CF_HP_Add_Things_To_Do": "やることリストを追加する",
+    "CL_CF_HP_Add_Things_To_Do": "もっと見る",
     "CL_CF_HP_Add_Things_To_Do_tip": "最もよく使用されるウィジェットをここに追加できます",
     "CL_CF_HP_Add_Discover": "発見を追加",
     "CL_CF_HP_Add_Discover_tip": "最もよく使われるヒントをここに追加できます",
