--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Hier kunt u de meest gebruikte handmatige routines toevoegen",
     "CL_CF_HP_Add_Home_Status": "Voeg thuisstatus toe",
     "CL_CF_HP_Add_Home_Status_tip": "Hier kunt u de meest gebruikte apparaatkaarten toevoegen",
-    "CL_CF_HP_Add_Things_To_Do": "Voeg dingen toe om te doen",
+    "CL_CF_HP_Add_Things_To_Do": "Voeg toe Ontdek meer",
     "CL_CF_HP_Add_Things_To_Do_tip": "Hier kunt u de meest gebruikte widgets toevoegen",
     "CL_CF_HP_Add_Discover": "Ontdek toevoegen",
     "CL_CF_HP_Add_Discover_tip": "Hier kunt u de meest gebruikte tips toevoegen",
