--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Tutaj możesz dodać najczęściej używane procedury obsługi",
     "CL_CF_HP_Add_Home_Status": "Dodaj status domu",
     "CL_CF_HP_Add_Home_Status_tip": "Tutaj możesz dodać najczęściej używane karty urządzeń",
-    "CL_CF_HP_Add_Things_To_Do": "Dodaj \"Rzeczy do zrobienia\"",
+    "CL_CF_HP_Add_Things_To_Do": "Dodaj Odkryj więcej",
     "CL_CF_HP_Add_Things_To_Do_tip": "Tutaj możesz dodać najczęściej używane widżety",
     "CL_CF_HP_Add_Discover": "Dodaj Odkryj",
     "CL_CF_HP_Add_Discover_tip": "Tutaj możesz dodać najczęściej używane wskazówki",
