--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4640,7 +4640,7 @@
     "CL_CF_HP_Add_Automation_tip": "Овде можете додати најчешће коришћене ручне рутине",
     "CL_CF_HP_Add_Home_Status": "Додај кућни статус",
     "CL_CF_HP_Add_Home_Status_tip": "Овде можете додати најчешће коришћене картице уређаја",
-    "CL_CF_HP_Add_Things_To_Do": "Додајте ствари које треба урадити",
+    "CL_CF_HP_Add_Things_To_Do": "Додајте Откријте више",
     "CL_CF_HP_Add_Things_To_Do_tip": "Овде можете додати најчешће коришћене виџете",
     "CL_CF_HP_Add_Discover": "Додај Дисцовер",
     "CL_CF_HP_Add_Discover_tip": "Овде можете додати најчешће коришћене савете",
